@@ -10,6 +10,8 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- vpopmail.h: replace declaration of crypt() with #include <crypt.h>.
 	- configure: remove enable-domainquotas option until the domain
 	  quota code is fixed.
+	- maildirquota.c: fix bug from 5.4.11 that could accidentally
+	  close stdin.
 
 5.4.11 - released 20-Mar-05
 
